[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "data-quality-monitoring"
version = "0.1.0"
description = "Data Quality Monitoring System"
requires-python = ">=3.8"
dependencies = [
    "pandas",
    "numpy", 
    "torch",
    "transformers",
    "sentence-transformers",
    "scikit-learn",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["*"]
exclude = ["tests*", "docs*", "data*", "*.egg-info", "build", "dist"]

[tool.ruff]
# Exclude common directories
exclude = [
    ".git",
    "__pycache__",
    "venv",
    ".venv",
    "build",
    "dist",
    "*.egg-info",
    ".cursor",
]

# Same line length as flake8
line-length = 120

# Python version
target-version = "py38"

[tool.ruff.lint]
# Enable specific rule sets
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort (import sorting)
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
]

# Ignore specific rules
ignore = [
    "E501",  # line too long (handled by line-length)
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
    "W191",  # indentation contains tabs
]

# Allow unused imports in __init__ files
[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401", "F403"]

[tool.ruff.lint.isort]
# Use single line imports
force-single-line = false
# Group imports
combine-as-imports = true